update test view style

--- a/html/popup.html
+++ b/html/popup.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="../assets/css/main.css" />
-  </head>
-  <body>
-    <div id="score-display">
-      <div class="score-header">
-        <h2>Test Scores</h2>
-        <button id="download-scores">Download JSON</button>
-      </div>
-      <div id="show"></div>
+
+<head>
+  <meta charset="UTF-8" />
+  <!-- <meta name="color-scheme" content="dark light"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="../assets/css/main.css" />
+</head>
+
+<body>
+  <div id="test-display">
+    <div class="test-header">
+      <h2>.test</h2>
+      <button id="download-scores">Download JSON</button>
     </div>
-    <script src="../assets/js/popup.js"></script>
-  </body>
+    <div id="show"></div>
+  </div>
+  <script src="../assets/js/popup.js"></script>
+</body>
+
 </html>
